--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
 
 install:
   - travis_retry composer update ${COMPOSER_FLAGS}
+before_script:
+  - ln -s /usr/bin/php /usr/bin/php74
 
 script:
   - vendor/bin/phpunit
